--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "pbf": "3.1.0",
     "pixelworks": "1.1.0",
-    "rbush": "2.0.2"
+    "rbush": "git://github.com/zzt1224/rbush.git#es6"
   },
   "devDependencies": {
     "@openlayers/eslint-plugin": "^4.0.0-beta.1",
